<resources>
    <string name="app_name">THW_MENMS</string>
    <string name="title_Op1">Einsatzbereit</string>
    <string name="title_Op2">Übernehmen</string>
    <string name="title_Op3">Einsatzort erreicht</string>
    <string name="title_buttonEinsatzDialog">Einsatz</string>
    <string name="title_buttonSprechwunsch">Sprech Wunsch</string>
    <string name="Button_1">Funktion 1</string>
    <string name="Button_2">Funktion 2</string>
    <string name="Button_3">Funktion 3</string>
    <string name="Button_4">Funktion 4</string>
    <string name="Button_5">Funktion 5</string>
    <string name="Button_startNav">Start Navigation</string>
    <string name="Button_resetNav">Reset Navigation</string>
    <string name="user_location_permission_explanation">Zugriff erlaubt?</string>
    <string name="user_location_permission_not_granted">Nope?</string>

    <string name="access_token" translatable="false">pk.eyJ1IjoiZnJhZ2lsaXplciIsImEiOiJjam82ejBvejEwbzlxM3FvYmhtMnlidW90In0.pwBUcJ8OqQb07kQQG6dBNw</string>
</resources>
